--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,13 +2,5 @@
   "name": "@repo/api",
   "version": "0.0.0",
   "private": true,
-  "devDependencies": {
-    "@vercel/style-guide": "^5.2.0",
-    "eslint-config-turbo": "^2.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-only-warn": "^1.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "typescript": "5.4.5"
-  }
+  "types": "types/index.d.ts"
 }
