fix: import and web layout error

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -38,6 +38,6 @@
       "./src/hooks/*.ts",
       "./src/hooks/*.tsx"
     ],
-    "./components/*": "./src/components/*.tsx"
+    "./components/*": "./src/components/ui/*.tsx"
   }
 }
