--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.3",
+    "@repo/db": "*",
     "@repo/ui": "*",
     "next": "14.2.6",
     "next-auth": "^5.0.0-beta.25",
