--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,17 +21,24 @@
     "typescript": "^4.9.0"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
+    "react-hook-form": "^7.53.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "exports": {
     "./button": "./src/components/button.tsx",
     "./select": "./src/components/select.tsx",
+    "./form": "./src/components/form.tsx",
+    "./label": "./src/components/label.tsx",
+    "./input": "./src/components/input.tsx",
     "./globals.css": "./src/globals.css",
     "./postcss.config": "./postcss.config.mjs",
     "./tailwind.config": "./tailwind.config.ts",
