--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "watch": "concurrently \"tsc -b -w\" \"vite build --watch\"",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@repo/ui": "*",
+    "currency-codes": "^2.2.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
