feat(api): defined schemas and types using zod

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,5 +2,10 @@
   "name": "@repo/api",
   "version": "0.0.0",
   "private": true,
-  "types": "types/index.d.ts"
+  "dependencies": {
+    "zod": "^3.23.8"
+  },
+  "exports": {
+    ".": "./src/product.ts"
+  }
 }
