--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.3",
+    "@repo/api": "*",
     "@repo/db": "*",
     "@repo/ui": "*",
     "next": "14.2.6",
     "next-auth": "^5.0.0-beta.25",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "zod": "^3.23.8",
+    "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
