--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@repo/api": "*",
     "@repo/db": "*",
     "@repo/ui": "*",
+    "bson": "^6.9.0",
     "next": "14.2.6",
     "next-auth": "^5.0.0-beta.25",
     "react": "18.3.1",
