--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "@repo/api": "*",
     "currency-codes": "^2.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
