--- a/packages/scraper/package.json
+++ b/packages/scraper/package.json
@@ -3,7 +3,8 @@
   "type": "module",
   "scripts": {
     "dev": "tsc --watch",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "exports": {
     ".": {
@@ -25,9 +26,13 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "typescript": "latest"
   },
   "dependencies": {
-    "cheerio": "^1.0.0"
+    "cheerio": "^1.0.0",
+    "jsonrepair": "^3.10.0"
   }
 }
