--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -11,9 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@repo/ui": "*",
     "@repo/api": "*",
+    "@repo/ui": "*",
     "currency-codes": "^2.2.0",
+    "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zod": "^3.23.8"
