chore(scraper): fix module output

--- a/packages/scraper/tsconfig.json
+++ b/packages/scraper/tsconfig.json
@@ -4,9 +4,10 @@
   "compilerOptions": {
     "baseUrl": ".",
     "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "esModuleInterop": true,
+    "moduleResolution": "node",
     "outDir": "dist",
-    "rootDir": ".",
+    "rootDir": "src",
     "paths": {
       "@/*": ["src/*"]
     }
