--- a/packages/scraper/package.json
+++ b/packages/scraper/package.json
@@ -12,17 +12,22 @@
       "default": "./dist/index.js"
     },
     "./amazon": {
-      "types": "./src/amazon.ts",
-      "default": "./dist/amazon.js"
+      "types": "./src/amazon/index.ts",
+      "default": "./dist/amazon/index.js"
     },
-    "./facebook": {
-      "types": "./src/amazon.ts",
-      "default": "./dist/amazon.js"
+    "./jsonld": {
+      "types": "./src/jsonld/index.ts",
+      "default": "./dist/jsonld/index.js"
+    },
+    "./microdata": {
+      "types": "./src/microdata/index.ts",
+      "default": "./dist/microdata/index.js"
     },
     "./opengraph": {
-      "types": "./src/opengraph.ts",
-      "default": "./dist/opengraph.js"
-    }
+      "types": "./src/opengraph/index.ts",
+      "default": "./dist/opengraph/index.js"
+    },
+    "./types": "./src/types.ts"
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
