--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@repo/api": "*",
     "@repo/ui": "*",
+    "@repo/scraper": "*",
     "currency-codes": "^2.2.0",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/chrome": "^0.0.283",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
