--- a/apps/extension/public/manifest.json
+++ b/apps/extension/public/manifest.json
@@ -40,7 +40,17 @@
         "tabs",
         "topSites",
         "webNavigation",
-        "webRequest",
-        "webRequestBlocking"
-      ]
+        "webRequest"
+      ],
+      "host_permissions": ["<all_urls>"],
+      "content_scripts": [
+        {
+          "matches": ["<all_urls>"],
+          "js": ["contentScript.js"],
+          "run_at": "document_idle"
+        }
+      ],
+      "background": {
+        "service_worker": "background.js"
+      }
 }
