--- a/packages/scraper/package.json
+++ b/packages/scraper/package.json
@@ -8,20 +8,16 @@
   },
   "exports": {
     ".": {
-      "types": "./src/index.ts",
-      "default": "./dist/index.js"
+      "types": "./dist/src/index.d.ts",
+      "default": "./dist/src/index.js"
     },
     "./amazon": {
-      "types": "./src/amazon.ts",
-      "default": "./dist/amazon.js"
+      "types": "./dist/src/amazon.d.ts",
+      "default": "./dist/src/amazon.js"
     },
-    "./facebook": {
-      "types": "./src/amazon.ts",
-      "default": "./dist/amazon.js"
-    },
-    "./opengraph": {
-      "types": "./src/opengraph.ts",
-      "default": "./dist/opengraph.js"
+    "./types": {
+      "types": "./dist/src/types.d.ts",
+      "default": "./dist/src/types.js"
     }
   },
   "devDependencies": {
