--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -9,7 +9,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@components/*": ["./app/components/*"],
+      "@lib/*": ["./lib/*"]
     }
   },
   "include": [
