--- a/packages/scraper/package.json
+++ b/packages/scraper/package.json
@@ -9,7 +9,7 @@
   "exports": {
     ".": {
       "types": "./src/index.ts",
-      "default": "./dist/src/index.js"
+      "default": "./dist/index.js"
     },
     "./amazon": {
       "types": "./src/amazon.ts",
