BREAKING CHANGE: fix `packages/ui` export

--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -12,7 +12,7 @@
   },
   "aliases": {
     "components": "@repo/ui/components",
-    "ui": "@repo/ui/components",
+    "ui": "@repo/ui/components/ui",
     "utils": "@repo/ui/lib/utils",
     "lib": "@repo/ui/lib",
     "hooks": "@repo/ui/hooks"
