--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -10,7 +10,7 @@
     ],
     "paths": {
       "@/*": ["./*"],
-      "@components/*": ["./app/components/*"],
+      "@components/*": ["./components/*"],
       "@lib/*": ["./lib/*"]
     }
   },
