--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
     "next-auth": "^5.0.0-beta.25",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.54.0",
     "zod": "^3.23.8",
     "zod-validation-error": "^3.4.0"
   },
