--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@repo/db": "*",
     "@repo/scraper": "*",
     "@repo/ui": "*",
+    "@tanstack/react-query": "^5.66.3",
     "bson": "^6.9.0",
     "lucide-react": "^0.462.0",
     "next": "14.2.6",
