feat: upgrade apps and packages to react 19 and nextjs 15

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,18 +14,19 @@
     "@repo/db": "*",
     "@repo/scraper": "*",
     "@repo/ui": "*",
-    "@tanstack/react-query": "^5.66.3",
+    "@tanstack/react-query": "^5.69.0",
     "bson": "^6.9.0",
-    "lucide-react": "^0.462.0",
-    "next": "14.2.6",
+    "lucide-react": "^0.483.0",
+    "next": "^15.2.3",
     "next-auth": "^5.0.0-beta.25",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
     "react-hook-form": "^7.54.0",
     "zod": "^3.23.8",
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^14.2.6",
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "@types/node": "^20",
