--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -12,12 +12,12 @@
   },
   "dependencies": {
     "@repo/api": "*",
-    "@repo/ui": "*",
     "@repo/scraper": "*",
+    "@repo/ui": "*",
     "currency-codes": "^2.2.0",
     "lucide-react": "^0.460.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
