--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -2,10 +2,10 @@
   "name": "@repo/db",
   "version": "0.0.0",
   "dependencies": {
-    "@prisma/client": "5.21.1"
+    "@prisma/client": "^6.5.0"
   },
   "devDependencies": {
-    "prisma": "5.21.1"
+    "prisma": "^6.5.0"
   },
   "scripts": {
     "db:generate": "prisma generate",
